--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/[PROJECT_ID]/[IMAGE]', '<DIR_CONTAINING_DOCKERFILE>']
+  args: ['build', '-t', 'gcr.io/cicd-pipeline-334604/alpine', '<DIR_CONTAINING_DOCKERFILE>']
   timeout: 180s
 
 #Push the image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/myapp:v1']
+  args: ['push', 'gcr.io/$cicd-pipeline-334604/myapp:v1']
 
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: "bash"
@@ -21,6 +21,6 @@ steps:
   args:
   - run
   - --filename=K8s/
-  - --image=gcr.io/$PROJECT_ID/myapp:v1
+  - --image=gcr.io/$cicd-pipeline-334604/myapp:v1
   - --location=us-west1-b
   - --cluster=mykube
