--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,20 +1,24 @@
 # Get a base Node image
+
 FROM node:alpine
 
 # Make the 'app' folder the current working directory
-WORKDIR /app
+WORKDIR /my-app-vue
 
-# Copy both 'package.json' and 'package-lock.json' (if present)
-COPY package*.json ./
+# Copy project files and folders to the current working directory (i.e. 'app' folder)
+COPY . .
+
 
 # Install project dependencies
 RUN npm install
 
-# Copy project files and folders to the current working directory (i.e. 'app' folder)
-COPY . .
+
 
 # Build app for production with minification
 RUN npm run build
 
 # Runs the website on http://localhost:8080
 CMD ["npm", "run", "serve"]
+
+
+
